# inc_time

./: .bazelrc  BUILD  MODULE.bazel  project_config.bzl  time_module_roadmap.md  versions.json
.github/workflows/: build-linux.yml  build-qnx.yml  build_linux.yml  build_qnx.yml  build_qnx8.yml  bzlmod-lock.yml  clang-tidy.yml  clang_tidy.yml  code-coverage.yml  code_coverage.yml  codeql.yml  comp-tests.yml  comp_tests.yml  copyright.yml  coverage_report.yml  docs-cleanup.yml  docs.yml  format.yml  gitlint.yml  license-check.yml  license_check.yml  sanitizers.yml
docs/: conf.py  index.rst
docs/TimeDaemon/_assets/: dd_data_control_flow.puml  sad_deployment.puml  sad_sdat_components.drawio  sad_vt_components.drawio
docs/TimeDaemon/_assets/ctrlflow/: ctrlflow_class.puml
docs/TimeDaemon/_assets/ipc/: ipc_init_seq.puml
docs/TimeDaemon/_assets/msg_broker/: msg_broker_workflow_seq.puml
docs/TimeDaemon/_assets/mw/: mw_time_receive_seq.puml
docs/features/: index.rst
docs/features/time/: index.rst
docs/features/time/_assets/: class_overview.puml
docs/features/time_daemon/_assets/: dd_class.puml
docs/features/time_slave/_assets/: timeslave_class.puml  timeslave_data_flow.puml  timeslave_deployment.puml
docs/release/: roadmap.rst
docs/time/: index.rst
docs/time/_assets/: architecture_layers.puml  class_overview.puml  dd_class.puml  dd_data_control_flow.puml  dd_deployment.puml  sad_deployment.puml  uc_availability.puml  uc_polling.puml  uc_subscription.puml  uc_testing.puml
docs/time/_assets/app/: app_class.puml  app_workflow_seq.puml
docs/time/_assets/high_res_steady_time/: ht1_polling.puml
docs/time/_assets/ipc/: ipc_class.puml  ipc_init_seq.puml  ipc_publish_seq.puml  ipc_receive_seq.puml
docs/time/_assets/msg_broker/: msg_broker_init_seq.puml
docs/time/_assets/mw/: mw_class.puml
docs/time/_assets/ptp_machine/: ptp_machine_get_new_data_seq.puml
docs/time/_assets/steady_clock/: st1_polling.puml
docs/time/_assets/system_clock/: sc1_polling.puml
docs/time/_assets/testing/: t2_test_factory.puml
docs/time/_assets/vehicle_time/: vt3_subscription.puml  vt4_diagnostics.puml
examples/: BUILD
examples/time/: BUILD
examples/time/high_res_steady_time/: BUILD
examples/time/high_res_steady_time/src/: BUILD  high_res_steady_time_handler.h  high_res_steady_time_handler_test.cpp  main.cpp
examples/time/hpls_time/: BUILD  hpls_time_handler.h  hpls_time_handler_test.cpp  main.cpp
examples/time/hpls_time/src/: hpls_time_handler.h  hpls_time_handler_test.cpp
examples/time/steady_time/: BUILD  main.cpp  steady_time_handler.h  steady_time_handler_test.cpp
examples/time/steady_time/src/: BUILD  steady_time_handler.h  steady_time_handler_test.cpp
examples/time/system_time/: BUILD  main.cpp  system_time_handler.h  system_time_handler_test.cpp
examples/time/system_time/src/: BUILD  system_time_handler.h  system_time_handler_test.cpp
examples/time/vehicle_time/: BUILD  main.cpp  vehicle_time_handler.h  vehicle_time_handler_test.cpp
examples/time/vehicle_time/src/: BUILD  main.cpp  vehicle_time_handler.h  vehicle_time_handler_test.cpp
main/: genindex.html  index.html  needs.json  objects.inv  schema_violations.json  search.html  searchindex.js
main/TimeSlave/: index.html
main/_sources/: index.rst.txt
main/_sources/TimeSlave/: index.rst.txt
main/_sources/features/: index.rst.txt  test_cases.rst.txt
main/_sources/features/time_daemon/: index.rst.txt
main/_sources/features/time_slave/: index.rst.txt
main/features/: index.html  test_cases.html
main/features/time_daemon/: index.html
main/features/time_slave/: index.html
main/time/: index.html
score/TimeDaemon/: BUILD
score/TimeDaemon/code/application/: BUILD  (+4 more)
score/time/: BUILD
score/time/HighPrecisionLocalSteadyClock/: BUILD  factory.cpp  factory.h  factory_mock.cpp  factory_mock.h  high_precision_local_steady_clock.cpp  high_precision_local_steady_clock.h  high_precision_local_steady_clock_mock.cpp  high_precision_local_steady_clock_mock.h
score/time/SynchronizedVehicleTime/: BUILD  factory.cpp  factory.h  factory_mock.cpp  factory_mock.h  slave_timebase_notification_types.cpp  slave_timebase_notification_types.h  slave_timebase_notification_types_test.cpp  synchronized_vehicle_time.cpp  synchronized_vehicle_time.h  synchronized_vehicle_time_mock.cpp  synchronized_vehicle_time_mock.h  time_base_status.cpp  time_base_status_test.cpp
score/time/clock/: BUILD  availability_hook.h  clock.h  clock_override_guard.h  clock_snapshot.h  clock_status.h  clock_status_test.cpp  clock_test_factory.h  clock_traits.h  no_status.h  scoped_clock_override.h  subscription_hook.h
score/time/common/: BUILD  time_base_status.h  time_base_status_test.cpp
score/time/high_res_steady_time/: BUILD
score/time/hpls_time/: BUILD  hpls_clock.cpp  hpls_clock.h  hpls_clock_iface.h  hpls_clock_mock.h  hpls_clock_test.cpp  hpls_time.h  hpls_time_mock.h
score/time/ptp/: BUILD  local_ptp_device_timer.h  master_ptp_device_timer.h  pdelay_measurement_data.h  pdelay_measurement_data_test.cpp  port_identity.h  time_slave_sync_data.h  time_slave_sync_data_test.cpp
score/time/steady_time/: BUILD  steady_clock.cpp  steady_clock.h  steady_clock_iface.h  steady_clock_mock.h  steady_clock_test.cpp
score/time/system_time/: BUILD  system_clock.cpp  system_clock.h  system_clock_iface.h  system_clock_mock.h  system_clock_test.cpp
score/time/vehicle_time/: BUILD  vehicle_clock.cpp  vehicle_clock.h  vehicle_clock_iface.h  vehicle_clock_mock.h  vehicle_clock_test.cpp  vehicle_time.h  vehicle_time_mock.h  vehicle_time_status_test.cpp
score/time_slave/: BUILD
score/time_slave/docs/: component_classification.rst  index.rst
score/ts_client/src/: BUILD  gptp_ipc.h  gptp_ipc_channel.h  gptp_ipc_data.h  gptp_ipc_publisher.cpp  gptp_ipc_publisher.h  gptp_ipc_publisher_test.cpp  gptp_ipc_receiver.cpp  gptp_ipc_receiver.h  gptp_ipc_receiver_test.cpp  gptp_ipc_roundtrip_test.cpp  gptp_ipc_test.cpp  gptp_ipc_test_utils.h
tests/rust/: test_main.rs
tools/: qnx_credential_helper.py
tools/lint/: BUILD  linters.bzl
(+387 files in other folders)
