# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "score_time",
    version = "0.0.0",
    compatibility_level = 0,
)

## Configure the C++ toolchain

bazel_dep(name = "score_bazel_cpp_toolchains", version = "0.5.4", dev_dependency = True)

gcc = use_extension("@score_bazel_cpp_toolchains//extensions:gcc.bzl", "gcc", dev_dependency = True)
gcc.toolchain(
    name = "score_gcc_x86_64_toolchain",
    target_cpu = "x86_64",
    target_os = "linux",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_gcc_aarch64_toolchain",
    target_cpu = "aarch64",
    target_os = "linux",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_qcc_x86_64_toolchain",
    sdp_version = "8.0.4",
    target_cpu = "x86_64",
    target_os = "qnx",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_qcc_aarch64_toolchain",
    sdp_version = "8.0.4",
    target_cpu = "aarch64",
    target_os = "qnx",
    use_default_package = True,
    version = "12.2.0",
)
use_repo(
    gcc,
    "score_gcc_aarch64_toolchain",
    "score_gcc_x86_64_toolchain",
    "score_qcc_aarch64_toolchain",
    "score_qcc_x86_64_toolchain",
)

## Custom Module Loading

### Public modules

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "score_bazel_platforms", version = "0.1.2")
bazel_dep(name = "score_logging", version = "0.2.1")

### Modules that are used internally within the repository but not exposed as part of the public API

bazel_dep(name = "score_docs_as_code", version = "4.5.0")

bazel_dep(name = "score_cpp_policies", version = "0.0.1", dev_dependency = True)

# git_override needed because clang_tidy/ support was added after the 0.0.1 registry release.
# Remove once score_cpp_policies >= 0.0.2 is available in the Bazel registry.
git_override(
    module_name = "score_cpp_policies",
    commit = "9e3800913a3a7ac791d5e6fb9e7339d1e65980f9",
    remote = "https://github.com/eclipse-score/score_cpp_policies.git",
)

bazel_dep(name = "score_process", version = "1.6.0", dev_dependency = True)
bazel_dep(name = "score_tooling", version = "1.2.0", dev_dependency = True)
bazel_dep(name = "aspect_rules_lint", version = "2.7.1", dev_dependency = True)
bazel_dep(name = "toolchains_llvm", version = "1.7.0", dev_dependency = True)

bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "google_benchmark", version = "1.9.5")

bazel_dep(name = "buildifier_prebuilt", version = "8.5.1", dev_dependency = True)

bazel_dep(name = "score_baselibs", version = "0.2.7")
bazel_dep(name = "score_lifecycle_health", version = "0.2.0")

# LLVM toolchain — provides @llvm_toolchain//:clang-tidy for the clang-tidy aspect.
llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
    dev_dependency = True,
)
llvm.toolchain(
    llvm_version = "19.1.7",
)
use_repo(llvm, "llvm_toolchain")

# grpc-java@1.66.0 has a BCR bug (extension no longer generates
# com_envoyproxy_protoc_gen_validate). Pulled transitively via
# score_lifecycle_health -> score_baselibs_rust -> aspect_rules_lint@2.x -> grpc.
# Override to a fixed version.
single_version_override(
    module_name = "grpc-java",
    version = "1.78.0.bcr.1",
)

# TODO: remove once inherited properly from `score_logging`.
bazel_dep(name = "trlc", version = "0.0.0", dev_dependency = True)
git_override(
    module_name = "trlc",
    commit = "650b51a47264a4f232b3341f473527710fc32669",  # trlc-2.0.2 release
    remote = "https://github.com/bmw-software-engineering/trlc.git",
)

bazel_dep(name = "score_bazel_tools_cc", version = "0.1.0", dev_dependency = True)

## Configure the python toolchain

bazel_dep(name = "rules_python", version = "1.8.5", dev_dependency = True)

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)

# Required by score_bazel_tools_cc 0.1.0 which registers Python 3.8 toolchains.
# rules_python 1.8.x removed 3.8 from its default download list; provide it
# explicitly via the standalone build (same approach as eclipse-score/baselibs).
python.single_version_override(
    python_version = "3.8.20",
    sha256 = {
        "aarch64-unknown-linux-gnu": "9d8798f9e79e0fc0f36fcb95bfa28a1023407d51a8ea5944b4da711f1f75f1ed",
        "x86_64-unknown-linux-gnu": "285e141c36f88b2e9357654c5f77d1f8fb29cc25132698fe35bb30d787f38e87",
    },
    urls = ["https://github.com/astral-sh/python-build-standalone/releases/download/20241002/cpython-{python_version}+20241002-{platform}-{build}.tar.gz"],
)
python.toolchain(
    #configure_coverage_tool = True,
    is_default = True,
    python_version = PYTHON_VERSION,
)
